// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`prop with object value 1`] = `
Array [
  Object {
    "identifier": null,
    "key": "测试",
    "loc": Object {
      "column": 13,
      "line": 1,
    },
    "tags": null,
  },
]
`;

exports[`with expression props 1`] = `
Array [
  Object {
    "identifier": null,
    "key": "测试",
    "loc": Object {
      "column": 9,
      "line": 1,
    },
    "tags": null,
  },
]
`;

exports[`with props 1`] = `
Array [
  Object {
    "identifier": null,
    "key": "测试",
    "loc": Object {
      "column": 7,
      "line": 1,
    },
    "tags": null,
  },
]
`;

exports[`with props 2`] = `Array []`;

exports[`with text 1`] = `
Array [
  Object {
    "identifier": null,
    "key": "测试",
    "loc": Object {
      "column": 4,
      "line": 1,
    },
    "tags": null,
  },
]
`;

exports[`with vue expression 1`] = `
Array [
  Object {
    "identifier": null,
    "key": "测试",
    "loc": Object {
      "column": 12,
      "line": 1,
    },
    "tags": null,
  },
]
`;
